# mcp_server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  mcp_server.py  openapi.yaml  openapi_generator.py  pyproject.toml  requirements.txt
mcp_server/: __init__.py  config.py  server.py
mcp_server/tools/: blogpost.py
mcp_server/utils/: openai_client.py  scraper.py
tests/: test_blogpost_tool.py  test_server.py
